RESOLVED FIXED207719
REGRESSION (r255961): Default state for data URL handling is incorrect
https://bugs.webkit.org/show_bug.cgi?id=207719
Summary REGRESSION (r255961): Default state for data URL handling is incorrect
Brent Fulgham
Reported 2020-02-13 13:59:12 PST
The default selected in r255961 breaks too many WebKit framework users. Switch from opt-out to opt-in while we work through compatibility issues.
Attachments
Patch (2.98 KB, patch)
2020-02-13 14:03 PST, Brent Fulgham
cdumez: review+
commit-queue: commit-queue-
Archive of layout-test-results from webkit-cq-01 for mac-mojave (3.16 MB, application/zip)
2020-02-13 16:09 PST, WebKit Commit Bot
no flags
Brent Fulgham
Comment 1 2020-02-13 14:01:30 PST
Brent Fulgham
Comment 2 2020-02-13 14:03:02 PST
WebKit Commit Bot
Comment 3 2020-02-13 16:09:46 PST
Comment on attachment 390684 [details] Patch Rejecting attachment 390684 [details] from commit-queue. New failing tests: editing/spelling/spellcheck-async-remove-frame.html Full output: https://webkit-queues.webkit.org/results/13322293
WebKit Commit Bot
Comment 4 2020-02-13 16:09:48 PST
Created attachment 390701 [details] Archive of layout-test-results from webkit-cq-01 for mac-mojave The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-01 Port: mac-mojave Platform: Mac OS X 10.14.6
Brent Fulgham
Comment 5 2020-02-13 16:12:13 PST
Note You need to log in before you can comment on or make changes to this bug.