REGRESSION (r255961): Default state for data URL handling is incorrect https://bugs.webkit.org/show_bug.cgi?id=207719 <rdar://problem/59334011>

Reviewed by Chris Dumez.

The default selected in r255961 breaks too many WebKit framework users. Switch from opt-out to opt-in
while we work through compatibility issues.

Source/WebCore:

Tested by existing test cases.

* page/Settings.yaml:

Source/WebKit:

* UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
(-[WKWebViewConfiguration init]):

Canonical link: https://commits.webkit.org/220693@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256571 268f45cc-cd09-0410-ab3c-d52691b4dbfc